---------------------------------------------------------------------------------------------------
Version: 1.1.0
Date: ????
  Features:
    - Updated to Factorio 1.1.
    - Added Finnish translation (by Sigma-One).
---------------------------------------------------------------------------------------------------
Version: 1.0.4
Date: 2020-10-19
  Changes:
    - Replaced un-minable non-terrain tiles in ruins with minable tiles.
    - Hold Shift while using the "Claim ruin" tool to remove all remnants (corpses of structures) in the area.
  Bugfixes:
    - Fixed a crash when a ruin was spawned with a invalid recipe.
    - Fixed that the claim ruin control had no locale.
---------------------------------------------------------------------------------------------------
Version: 1.0.3
Date: 2020-09-28
  Bugfixes:
    - Fixed a crash when using a mod-provided ruin set and the rso mod is enabled.
---------------------------------------------------------------------------------------------------
Version: 1.0.2
Date: 2020-09-25
  Changes:
    - Ruins are no longer deconstructable by default.
    - Instead you have to claim them with a selection tool obtained with Shift + C or from the shortcut bar.
    - After claiming a ruin, you can deconstruct it.
---------------------------------------------------------------------------------------------------
Version: 1.0.1
Date: 2020-09-24
  Features:
    - Added 15 more ruins. 
    - Added russian translation (by Shadow_Man).
---------------------------------------------------------------------------------------------------
Version: 1.0.0
Date: 2020-09-23
  Features:
    - Updated to Factorio 1.0.
    - Completely new ruin spawning algorithm and data structure.
    - Added 27 more ruins. 
    - Added a setting to make ruin defenses non-hostile.
    - Added a setting to select which ruin set to use.
    - Added the ability for other mods to add their own ruin sets.
    - Added scenario that spawns all ruins, for mod debug.